--- a/lab1/manifest.json
+++ b/lab1/manifest.json
@@ -2,13 +2,13 @@
   "name": "EECS1720 Extension", 
   "version": "100.0",
   "description": "Build an Basic Extension!",
-  "permissions": ["activeTab"],
+  "permissions": ["storage", "activeTab", "scripting"],
   "icons": {
     "16": "img/icon16.png",
       "32": "img/icon32.png",
       "48": "img/icon48.png"
   },
-  "browser_action": {
+  "action": {
     "default_popup": "popup.html",
     "default_icon": {
       "16": "img/icon16.png",
@@ -16,5 +16,13 @@
       "48": "img/icon48.png"
     }
   },
-  "manifest_version": 2
+  "options_page": "options.html",
+"manifest_version": 3,
+  "background": {
+    "service_worker": "background.js"
+  }
+ 
 }
+  
+
+
